--- a/contact-us.html
+++ b/contact-us.html
@@ -14,7 +14,7 @@
     <nav id="nav">
         <h1><u><i>Marine Life</i></u></h1>
         <ul>
-            <li><a href="home.html"><i class="fa-solid fa-house"></i>Home</a></li>
+            <li><a href="index.html"><i class="fa-solid fa-house"></i>Home</a></li>
             <li><a href="life.html"><i class="fa-solid fa-fish"></i>Life In Water</a></li>
             <li><a href="contact-us.html"><i class="fa-solid fa-envelope"></i>Contact Us</a></li>
         </ul>
