updates in text, added favicon,added more hover effects, other small fixes

--- a/life.html
+++ b/life.html
@@ -9,6 +9,7 @@
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="life.css">
+    <link rel="shark icon" href="./images/shark-favicon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -27,11 +28,13 @@
         <h2 class="life-title">Life In Water</h2>
         <div class="container">
             <div class="box">
-                <img src="jellyfish.jpg">
+                <div class="life-img">
+                    <img src="./images/jellyfish.jpg">
+                </div>
                 <h2>Jellyfish</h2>
-                <p>Jellyfish, also known as sea jellies or simply jellies, are the medusa-phase of certain
+                <p>Jellyfish are the medusa-phase of certain
                     gelatinous members of the subphylum Medusozoa, which is a major part of the phylum
-                    Cnidaria. Jellyfish are mainly free-swimming marine animals, although a few are
+                    Cnidaria. They are mainly free-swimming marine animals,but a few are
                     anchored to the seabed by stalks rather than being motile. They are made of an
                     umbrella-shaped main body made of mesoglea, known as the bell, and a collection of
                     trailing tentacles on the underside. Via pulsating contractions, the bell can provide
@@ -39,7 +42,9 @@
                     cells and may be used to capture prey or to defend against predators.</p>
             </div>
             <div class="box">
-                <img src="shark.jpg">
+                <div class="life-img">
+                    <img src="./images/shark.jpg">
+                </div>
                 <h2>Shark</h2>
                 <p>Sharks are a group of elasmobranch cartilaginous fish characterized by a ribless 
                     endoskeleton, dermal denticles, five to seven gill slits on each side, and pectoral 
@@ -47,12 +52,14 @@
                     Selachii and are the sister group to the Batomorphi. Some sources extend the term 
                     "shark" as an informal category including extinct members of Chondrichthyes with a 
                     shark-like morphology, such as hybodonts. Shark-like chondrichthyans such as 
-                    Cladoselache and Doliodus first appeared in the Devonian Period (419–359 million years), 
+                    Cladoselache and Doliodus first appeared in the Devonian Period (419-359 million years), 
                     though some fossilized chondrichthyan-like scales are as old as the Late Ordovician 
-                    (458–444 million years ago).</p>
+                    (458-444 million years ago).</p>
             </div>
             <div class="box">
-                <img src="clownfish.jpg">
+                <div class="life-img">
+                    <img src="./images/clownfish.jpg">
+                </div>
                 <h2>Clownfish</h2>
                 <p>Clownfishes or anemonefishes are saltwater fishes in the genus Amphiprion within the 
                     subfamily Amphiprioninae. They are classified as damselfish within the family 
@@ -70,10 +77,10 @@
 <!-- Footer -->
     <footer>
         <div class=”footer-content”>
-            <p>website about marine life. made to raise awareness about them to promote ocean conservation</p>
+            <p>website about marine life. made to raise awareness about them to promote ocean conservation.</p>
         </div>
         <div class="copyright">
-            <p>&copy; <a href=”#”>Parimoksha</a> | 13 June 2025</p>
+            <p>&copy; <a href="https://github.com/pari55051">Parimoksha</a> | 13 June 2025</p>
         </div>
     </footer>
 </body>
