--- a/contact-us.html
+++ b/contact-us.html
@@ -7,6 +7,7 @@
     <title>Marine Life</title>
     <link rel="stylesheet" href="contact-us.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="shark icon" href="./images/shark-favicon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -77,10 +78,10 @@
 <!-- Footer -->
     <footer>
         <div class=”footer-content”>
-            <p>website about marine life. made to raise awareness about them to promote ocean conservation</p>
+            <p>website about marine life. made to raise awareness about them to promote ocean conservation.</p>
         </div>
         <div class="copyright">
-            <p>&copy; <a href=”#”>Parimoksha</a> | 13 June 2025</p>
+            <p>&copy; <a href="https://github.com/pari55051">Parimoksha</a> | 13 June 2025</p>
         </div>
     </footer>
 </body>
