--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marine Life</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="index.css">
+    <link rel="shark icon" href="./images/shark-favicon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -24,65 +25,65 @@
     <div class="home">
         <h1 class="title">Marine Life</h1>
 
-        <p class="intro-text">Marine life, also known as sea life or ocean life, refers to the vast array of organisms that inhabit the world's oceans and seas. These organisms range from microscopic plankton to the largest animals on Earth, such as the blue whale. Marine ecosystems are incredibly diverse and play a critical role in maintaining the health of the planet.</p>
+        <p class="intro-text">Many organisms inahbit the ocean which covers our earth. They are collectively known as Marine Life. Marine life consists of organisms ranging from smallest of the bacterias to the largest mammal on earth. The ocean and the organisms living in it constitute the Marine Ecosystem. It plays a crucial role in the earth's complete ecosystem and helps keep our planet healthy.</p>
 
         <div class="info-div">
             <h2>Overview</h2>
-            <p>Oceans cover about 71% of the Earth's surface and support millions of species, many of which remain undiscovered. Marine organisms contribute to global processes like oxygen production, climate regulation, and nutrient cycling. They also provide food, medicine, and livelihoods for billions of people worldwide.</p>
+            <p>Oceans cover about 71% of the Earth's surface. They support millions of species in which many of them are still undiscovered. Marine organisms play an important role in processes like oxygen production, climate regulation, and nutrient cycling. They also provide food, medicine, and livelihoods for billions of people worldwide.</p>
         </div>
 
         <div class="info-div">
             <h2>Habitats</h2>
-            <p>Different marine species live in a wide variety of ocean environments. Each habitat supports its own unique community of organisms adapted to specific conditions like depth, temperature, and light availability.</p>
+            <p>Marine animals live in a wide variety of ocean environments. Each habitat has its own unique features like depth, water temperature and amount of light that reaches from the sun to the habitat. Some habitats and their features are as folows: </p>
             <ul>
-                <li><strong>Coral Reefs</strong>: Warm, shallow waters with high biodiversity; often called the "rainforests of the sea."</li>
-                <li><strong>Deep Sea</strong>: Cold, dark areas below 200 meters; home to species that can survive high pressure and low light.</li>
-                <li><strong>Coastal Areas</strong>: Includes estuaries, mangroves, and tidal zones that act as nurseries for many marine species.</li>
-                <li><strong>Open Ocean</strong>: The largest and least explored habitat, home to migratory species like tuna and whales.</li>
+                <li><strong>Coral Reefs</strong>: Warm, shallow water. Many organisms thive in such an environment and thus the name "Rainforests of the Ocean"</li>
+                <li><strong>Deep Sea</strong>: Cold, dark areas below 200 meters. Only a few species who can survive such conditions live here</li>
+                <li><strong>Coastal Areas</strong>: Includes estuaries, mangroves, and tidal zones. These provide shelter and food for many marine organisms</li>
+                <li><strong>Open Ocean</strong>: Largest and least explored. Generally, migrating secias like tuna and whales are found here</li>
             </ul>
         </div>
 
         <div class="info-div">
             <h2>Major Groups of Marine Organisms</h2>
-            <p>Marine life includes a wide range of species that vary in size, structure, and ecological roles. The main groups include:</p>
+            <p>Marine life includes a wide range of species. They vary in size, structure, and their role in the ecosystem. The main groups include the following:</p>
             <ul>
-                <li><strong>Fish</strong>: Vertebrates that live in water and use gills to extract oxygen. They are the most diverse group of marine animals.</li>
-                <li><strong>Marine Mammals</strong>: Warm-blooded animals like whales, dolphins, and seals that breathe air and often live in family groups.</li>
-                <li><strong>Invertebrates</strong>: Animals without backbones, such as jellyfish, octopuses, crabs, and sea stars.</li>
-                <li><strong>Marine Plants and Algae</strong>: Include seaweeds, seagrasses, and microscopic phytoplankton that perform photosynthesis.</li>
+                <li><strong>Fish</strong>:They are the most diverse group of marine animals. Are vertebrates and use gills to breathe under water.</li>
+                <li><strong>Marine Mammals</strong>: Some warm-blooded animals like Whale, Dolphins, etc. live in groups and frequently come upto the surface to breathe. </li>
+                <li><strong>Invertebrates</strong>: Species like jellysih, octopus, etc. i.e the ones which do not have a backbone</li>
+                <li><strong>Marine Plants and Algae</strong>: A variety of plants like seaweeds, seagrasses and corals thrive under water</li>
             </ul>
         </div>
 
         <div class="info-div">
             <h2>Importance of Marine Life</h2>
-            <p>Marine life is essential to the health of the Earth’s ecosystem. Oceans absorb carbon dioxide and produce over half of the planet’s oxygen through the activity of marine plants and plankton. Marine ecosystems also regulate weather patterns, support global trade routes, and offer recreational and cultural value.</p>
+            <p>Marine life is essential to the health of the Earth's ecosystem. Oceans absorb carbon dioxide and produce over half of the planet's oxygen through the activity of marine plants and planktons. Marine ecosystems also regulate weather patterns, support global trade routes, and offer recreational and cultural value.</p>
         </div>
 
         <div class="info-div">
             <h2>Threats to Marine Life</h2>
-            <p>Human activities are causing significant harm to marine ecosystems. If left unaddressed, these threats could lead to the collapse of entire ecosystems and loss of species.</p>
+            <p>Human activities are causing a lot of harm to marine ecosystems. If left unaddressed, these threats could lead to the collapse of entire ecosystems and loss of species. Some activites directly harming the oceans are as follows:</p>
             <ul>
-                <li><strong>Pollution</strong>: Includes plastic waste, oil spills, and chemical runoff from land-based sources.</li>
-                <li><strong>Overfishing</strong>: The removal of fish from the ocean at rates faster than they can reproduce.</li>
-                <li><strong>Climate Change</strong>: Leads to rising ocean temperatures, acidification, and the melting of polar ice.</li>
-                <li><strong>Habitat Destruction</strong>: Coastal development, trawling, and coral reef damage reduce natural habitats.</li>
+                <li><strong>Pollution</strong>: Waste dumped into the oceans, especially plastic waste, un-treated chemicals, oil-spills,etc. cause direct harm to the ecosystem</li>
+                <li><strong>Overfishing</strong>: Fish species are being depleted due to fishing more than required and faster than the species can reproduce</li>
+                <li><strong>Climate Change</strong>: Rise in ocean temperature, meltig of polar ice,etc. are caused by climate change which harm the oceans</li>
+                <li><strong>Habitat Destruction</strong>: Coastal development, trawling, and coral reef damage harm natural habitats of the marine life</li>
             </ul>
         </div>
 
         <div class="info-div">
             <h2>Conservation Efforts</h2>
-            <p>Efforts to protect marine life include international laws, marine protected areas (MPAs), and sustainable fishing practices. Organizations and governments work together to monitor ocean health, reduce pollution, and raise awareness about marine conservation.</p>
+            <p>Some measures are being taken to protect marine life such as making international laws, declaring Marine Protected Areas(MPAs), promoting sustainable fishing practices,etc. Many organizations, government or independent, work to monitor ocean health and raise awareness about marine conservation. Everyone can contribute by reducing plastic use, supporting sustainable seafood, and following good environmental practices.</p>
         </div>
 
         <div class="info-div">
-            <p class="outro-text">Everyone can contribute by reducing plastic use, supporting sustainable seafood, and learning more about the importance of ocean life.</p>
+            <p class="outro-text">Small Steps Count. Let's play our part in Marine Conservation!!</p>
         </div>
     </div>
 
 <!-- Footer -->
     <footer>
         <div class=”footer-content”>
-            <p>website about marine life. made to raise awareness about them to promote ocean conservation</p>
+            <p>website about marine life. made to raise awareness about them to promote ocean conservation.</p>
         </div>
         <div class="copyright">
             <p>&copy; <a href="https://github.com/pari55051">Parimoksha</a> | 13 June 2025</p>
